# PythonGeneNetworkAPI

./: .gitignore  README.ipynb  README.md  pyproject.toml
genenetworkapi/: __init__.py  _utils.py  get_data.py  query.py  utils_geno.py
genenetworkapi/info/: __init__.py  accession.py  probeset.py
genenetworkapi/v_pre1/: __init__.py  download_data.py  get_data.py  info_data.py  list_data.py  query.py  run_data.py  utils_geno.py
tests/: gnAPI_test.py
